config: allow production vercel domain in backend CORS configuration